; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_parse_objectish_with_prefix.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_parse_objectish_with_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.branch = type { i32 }

@command_buf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.branch*, i8*)* @parse_objectish_with_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_objectish_with_prefix(%struct.branch* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.branch*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.branch* %0, %struct.branch** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @command_buf, i32 0, i32 0), align 4
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @skip_prefix(i32 %7, i8* %8, i8** %6)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %16

12:                                               ; preds = %2
  %13 = load %struct.branch*, %struct.branch** %4, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @parse_objectish(%struct.branch* %13, i8* %14)
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %12, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @skip_prefix(i32, i8*, i8**) #1

declare dso_local i32 @parse_objectish(%struct.branch*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
